# entservices-infra

./: CHANGELOG.md  CMakeLists.txt  COVERITY_FIXES.md  README.md  build_dependencies.sh  cov_build.sh  services.cmake
.github/: copilot-instructions.md
Analytics/: Analytics.cpp  Module.h
App2AppProvider/: App2AppProvider.conf.in  App2AppProvider.config  App2AppProvider.cpp  App2AppProvider.h  App2AppProviderImplementation.cpp  App2AppProviderImplementation.h  CMakeLists.txt  Module.h
AppGateway/: AppGateway.cpp  AppGateway.h  AppGatewayAuthenticator.cpp  AppGatewayAuthenticator.h  AppGatewayImplementation.cpp  AppGatewayImplementation.h  AppGatewayResponderImplementation.cpp  AppGatewayResponderImplementation.h  AppGatewayTelemetry.cpp  AppGatewayTelemetry.h  CMakeLists.txt  Module.h  Resolver.cpp  Resolver.h  appGatewayConfig.json
AppManager/: AppManager.conf.in  AppManager.config  AppManager.h  AppManagerImplementation.cpp  AppManagerImplementation.h  AppManagerTelemetryFilters.h  AppManagerTelemetryReporting.cpp  AppManagerTelemetryReporting.h  CMakeLists.txt  LifecycleInterfaceConnector.cpp  LifecycleInterfaceConnector.h  Module.h
AppNotifications/: AppNotifications.cpp  AppNotificationsImplementation.cpp  AppNotificationsImplementation.h  Module.h
AppcLifecycleManager/: AppcLifecycleManager.conf.in  AppcLifecycleManager.config  AppcLifecycleManager.cpp  AppcLifecycleManager.h  CMakeLists.txt  Module.h  cmake_old
BartonMatter/: BartonMatter.conf.in  BartonMatter.config  BartonMatter.cpp  BartonMatter.h  BartonMatterImplementation.cpp  BartonMatterImplementation.h  CMakeLists.txt  Module.cpp  Module.h
CloudStore/: CloudStoreImplementation.cpp  CloudStoreImplementation.h  Module.h
DownloadManager/: CMakeLists.txt  DownloadManager.cpp  DownloadManagerHttpClient.cpp  DownloadManagerHttpClient.h  DownloadManagerImplementation.cpp  DownloadManagerImplementation.h  Module.h
FbSettings/: CMakeLists.txt  FbSettings.cpp  FbSettings.h  FbSettingsImplementation.cpp  FbSettingsImplementation.h  Module.h
GStreamerPlayer/: CHANGELOG.md  CMakeLists.txt  GStreamerPlayer.conf.in  GStreamerPlayer.config  GStreamerPlayer.cpp  GStreamerPlayer.h  GStreamerPlayerImplementation.cpp  GStreamerPlayerImplementation.h  Module.cpp  Module.h  README.md
GstreamerService/: CHANGELOG.md  CMakeLists.txt  GstreamerService.conf.in  GstreamerService.config  GstreamerService.cpp  GstreamerService.h  GstreamerServiceImplementation.cpp  GstreamerServiceImplementation.h  Module.h  README.md
LifecycleManager/: AppGatewayAuthenticator.cpp  AppGatewayAuthenticator.h  ApplicationContext.cpp  ApplicationContext.h  CMakeLists.txt  LifecycleManager.cpp  LifecycleManager.h  LifecycleManagerImplementation.cpp  LifecycleManagerImplementation.h  LifecycleManagerTelemetryReporting.cpp  LifecycleManagerTelemetryReporting.h  Module.h  RequestHandler.cpp  RippleHandler.cpp  RuntimeManagerHandler.cpp  State.cpp  State.h  StateHandler.cpp  StateTransitionHandler.cpp  WebSocket.cpp  WindowManagerHandler.cpp  WindowManagerHandler.h
MessageControl/: Module.h
Migration/: CMakeLists.txt  MigrationImplementation.cpp  MigrationImplementation.h  Module.h  README.md
Monitor/: CMakeLists.txt  Module.h  Monitor.config  Monitor.h
NativeJS/: CMakeLists.txt  Module.h  NativeJSImplementation.cpp  NativeJSPlugin.cpp
OCIContainer/: CMakeLists.txt  DobbyInterface.cpp  DobbyInterface.h  Module.h  OCIContainerImplementation.h
PackageManager/: CMakeLists.txt  HttpClient.cpp  Module.h  PackageImpl.cpp  PackageImpl.h  PackageManager.conf.in  PackageManager.cpp  PackageManager.h  PackageManagerImplementation.cpp  PackageManagerImplementation.cpp_rateLimit  PackageManagerImplementation.h  PackageManagerJsonData.h  RalfPackageImpl.cpp  RalfPackageImpl.h
PersistentStore/: Module.h  PersistentStore.cpp  PersistentStore.h
PreinstallManager/: CMakeLists.txt  Module.h  PreinstallManager.conf.in  PreinstallManager.cpp  PreinstallManager.h  PreinstallManagerImplementation.cpp  PreinstallManagerImplementation.h
RDKShell/: Module.h
RDKWindowManager/: CMakeLists.txt  Module.h  RDKWindowManager.h  RDKWindowManagerImplementation.cpp  RDKWindowManagerImplementation.h
ResourceManager/: CMakeLists.txt  Module.h  README.md  ResourceManager.conf.in  ResourceManager.config  ResourceManager.cpp  ResourceManager.h  ResourceManagerImplementation.cpp  ResourceManagerImplementation.h
RuntimeManager/: AIConfiguration.cpp  AIConfiguration.h  CMakeLists.txt  DobbyEventListener.cpp  DobbyEventListener.h  DobbySpecGenerator.cpp  DobbySpecGenerator.h  IEventHandler.h  Module.h  RalfPackageBuilder.cpp  RalfPackageBuilder.h  RalfSupport.h  RialtoConnector.cpp  RialtoConnector.h  RuntimeManager.h  RuntimeManagerImplementation.cpp  RuntimeManagerImplementation.h  WindowManagerConnector.cpp  WindowManagerConnector.h
RuntimeManager/Gateway/: CMakeLists.txt  ContainerUtils.cpp  ContainerUtils.h  Debugger.h  NetFilter.cpp  NetFilter.h  NetFilterLock.cpp  NetFilterLock.h  NetFilterUtils.c  NetFilterUtils.h  WebInspector.cpp  WebInspector.h  ipt_kernel_headers.h  libiptc.h  xtables-version.h  xtables.h  xtcshared.h
RuntimeManager/ralf/: RalfConstants.h  RalfOCIConfigGenerator.cpp  RalfOCIConfigGenerator.h  RalfPackageBuilder.cpp  RalfPackageBuilder.h  RalfSupport.cpp  RalfSupport.h
RustAdapter/: LocalPlugin.cpp  Module.h  SocketServer.cpp
SceneSet/: CMakeLists.txt  Module.h  SceneSet.conf.in  SceneSet.cpp  SceneSet.h  SceneSetPlugin.json
SharedStorage/: CMakeLists.txt  Module.h  SharedStorage.cpp  SharedStorage.h  SharedStorageImplementation.cpp  SharedStorageImplementation.h  SharedStorageJsonRpc.cpp
StorageManager/: CMakeLists.txt  Module.h  RequestHandler.cpp  RequestHandler.h  StorageManager.cpp  StorageManager.h  StorageManagerImplementation.cpp  StorageManagerImplementation.h
Telemetry/: CMakeLists.txt  Module.h  Telemetry.cpp  TelemetryImplementation.cpp  TelemetryImplementation.h  TelemetryMetrics.cpp  TelemetryMetrics.h
TelemetryMetrics/: Module.h  TelemetryFilters.h  TelemetryMetricsImplementation.cpp
Tests/: README.md
(+125 files in other folders)
